Low contrast (colour) error on search fix

--- a/wp-content/themes/gca-intranet-foundation/assets/scss/_header-footer.scss
+++ b/wp-content/themes/gca-intranet-foundation/assets/scss/_header-footer.scss
@@ -126,6 +126,7 @@ body {
     background-color: #528bf8;
     border-radius: 0 5px 5px 0;
     margin-bottom: 0 !important;
+    color: #0b0c0c;
 }
 
 /* --- Media Queries (Tablet and Up) --- */
